[metadata]
name = pythoncalculator
version = 0.0.1
author = Sara Moeskjaer
author_email = s.moeskjaer@sheffield.ac.uk
description = Perform basic calculations in python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/s-moeskjaer/python_calculator_new
project_urls =
    Bug Tracker = https://github.com/s-moeskjaer/python_calculator_new/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
